<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:backgroundTint="@color/white"
        android:layout_width="match_parent"
        android:background="@color/main_color"
        android:layout_height="match_parent"
        tools:context=".ForWordsActivity">

    <TextView
            android:text="@string/word"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:layout_height="wrap_content" android:id="@+id/just_word"
            tools:ignore="MissingConstraints" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="220dp"/>
    <TextView
            android:text="@string/transcription"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-smallcaps"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            tools:ignore="MissingConstraints" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.497" android:layout_marginBottom="412dp"/>
    <Button
            android:text="@string/i_don_t_know_this_word"
            android:textSize="17sp"
            android:backgroundTint="@color/main_red"
            android:textColor="@color/main_color"
            android:layout_width="291dp"
            android:fontFamily="sans-serif-smallcaps"
            android:layout_height="56dp" android:id="@+id/idontknowbutton"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="100dp"/>
    <ImageView
            android:layout_width="382dp"
            android:layout_height="164dp" app:srcCompat="@drawable/_1" android:id="@+id/imageView5"
            tools:ignore="MissingConstraints" android:contentDescription="@string/todo"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintHorizontal_bias="0.551"/>
    <TextView
            android:text="@string/your_word_is"
            android:textSize="47sp"
            android:textColor="@color/main_color"
            android:fontFamily="sans-serif-smallcaps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="40dp"
            app:layout_constraintHorizontal_bias="0.495"/>
    <Button
            android:text="@string/i_know_the_word"
            android:textSize="20sp"
            android:backgroundTint="@color/main_blue"
            android:textColor="@color/main_color"
            android:fontFamily="sans-serif-smallcaps"
            android:layout_width="291dp"
            android:layout_height="56dp" android:id="@+id/iknowword"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/idontknowbutton" android:layout_marginBottom="32dp"/>
    <Button
            android:text="@string/menu"
            android:layout_width="wrap_content"
            android:textColor="@color/main_color"
            android:backgroundTint="@color/main_purple"
            android:fontFamily="sans-serif-smallcaps"
            android:layout_height="wrap_content" android:id="@+id/buttonformenu"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="32dp" android:layout_marginBottom="28dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>