<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:backgroundTint="@color/white"
        android:background="@color/main_color"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/tapto"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:layout_height="wrap_content" android:id="@+id/textView"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginBottom="420dp"/>
    <ImageView
            android:layout_width="361dp"
            android:layout_height="111dp" app:srcCompat="@drawable/logo" android:id="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" android:contentDescription="@string/todo13"/>
    <TextView
            android:text="@string/start_falling1"
            android:textSize="40sp"
            android:fontFamily="sans-serif-medium"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:layout_height="wrap_content" android:id="@+id/textView5"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginBottom="384dp" app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <Button
            android:text=""
            android:backgroundTint="@color/invis"
            android:textSize="30sp"
            android:textColor="@color/invis"
            android:layout_width="366dp"
            android:layout_height="418dp" android:id="@+id/btnTofk"
            tools:ignore="MissingConstraints" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="140dp" app:layout_constraintHorizontal_bias="0.555"/>
    <ImageButton
            android:layout_width="83dp"
            android:layout_height="65dp"
            android:src="@drawable/stats"
            android:backgroundTint="@color/invis"
            android:background="@color/main_color"
            android:id="@+id/imageStats"
            tools:ignore="InvalidId,MissingConstraints" android:contentDescription="@string/todo12"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginBottom="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>