<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="match_parent"
        tools:context=".Statistic">
        <com.anychart.AnyChartView
                android:layout_width="350dp"
                android:layout_height="350dp"
                android:id="@+id/any_chart_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_bias="0.491" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.236"/>
        <TextView
                android:text="@string/your_tries_for_today"
                android:textSize="37sp"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-smallcaps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView6"
                tools:ignore="MissingConstraints" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp" app:layout_constraintHorizontal_bias="0.49"/>
        <Button
                android:text="@string/back_to_menu"
                android:textSize="30sp"
                android:layout_width="350dp"
                android:fontFamily="sans-serif-smallcaps"
                android:textColor="@color/main_color"
                android:backgroundTint="@color/main_blue"
                android:layout_height="70sp" android:id="@+id/backmenu"
                tools:ignore="MissingConstraints"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.497"
                android:layout_marginBottom="40dp"/>
        <Button
                android:text="@string/clear_statistic"
                android:textSize="30sp"
                android:layout_width="350dp"
                android:fontFamily="sans-serif-smallcaps"
                android:textColor="@color/main_color"
                android:backgroundTint="@color/main_red"
                android:layout_height="70sp" android:id="@+id/clearbutton"
                tools:ignore="MissingConstraints"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintBottom_toTopOf="@+id/backmenu" android:layout_marginBottom="24dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>